Tournaments display functionnal

--- a/BinaryProjectGit/webcontent/header.html
+++ b/BinaryProjectGit/webcontent/header.html
@@ -3,13 +3,14 @@
 <head>
     <title>Binary Project</title>
     <meta name="google-signin-client_id" content="398953615251-opllhkrv8a95cqpq6lau3tf29gekk119.apps.googleusercontent.com">
+    <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/graph.css">
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
-<!--    <link rel="stylesheet" type="text/css" href="tournaments.css">-->
+    <link rel="stylesheet" type="text/css" href="css/tournaments.css">
 </head>
 <body>
 <header>
@@ -20,16 +21,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand navbar-nav" href="/"><img class="logo-header" src="images/logo.png"></a>
+        <a class="navbar-brand navbar-nav" href="/" id="homeButtonHeader"><img class="logo-header" src="images/logo.png"></a>
         <div id="navbarTogglerDemo03" class="collapse navbar-collapse order-3">
             <ul class="navbar-nav my-2 my-lg-0 ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/" id="homeLinkHeader">Home</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/tournaments.html">Tournaments</a>
+                    <a class="nav-link" href="/" id="tournamentsLinkHeader">Tournaments</a>
                 </li>
                 <li class="nav-item loginLink">
 <!--                    <?php if($_SESSION['connectedUser'] != null) { ?>-->
