--- a/BinaryProjectGit/webcontent/home.html
+++ b/BinaryProjectGit/webcontent/home.html
@@ -1,3 +1,4 @@
+<!-- ################################################## HOME PAGE ################################################## -->
 <div class="landingPage">
     <div class="headLanding masthead text-white text-center" id ="kingsLanding">
         <div class="overlay"></div>
@@ -90,4 +91,73 @@
         <!-- TradingView Widget END -->
     </div>
     <div id="cookie-msg" style="position: fixed; bottom: 0px; width: 100%; text-align: center; padding: 30px 50px; background-color: #202a33; color: whitesmoke; font-size: 16px;"><span class="msg">This website uses cookies. By using this website you consent to our use of these cookies. For more information visit our <a href="https://www.jqueryscript.net/privacy/" style="color: rgb(255, 255, 0); text-decoration: underline;">Privacy Policy</a>. <button onclick="OnCookieAccept()" class="btn-aceptar" style="text-decoration: none; padding: 5px 10px; border-radius: 5px; background-color: whitesmoke; color:#202a33; font-size: 11px;">Got It!</button></span></div>
+</div>
+<!-- ################################################## TOURNAMENTS PAGE ################################################## -->
+<div class="tournamentsPage">
+    <div class="container-fluid tournamentsContainer">
+        <div class="confirmDiv">
+            <h3>Confirmation</h3>
+            <p>Are you sure to take part in this competition ?</p>
+            <p class="align-right">Once registered, you won't be able to back out.</br>The bid amount will be credited from your account at the beginning of the tournament.</p></br>
+            <div class="containerDetails">
+                <div class="row rowDetails">
+                    <div class="col-6 col-md-12 colDetails">
+                        <p class="bidP">Bid: 50</p>
+                    </div>
+                    <div class="col-6 col-md-12 colDetails">
+                        <p class="startingTimeP">Starting time: Today at 1:00pm</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container containerButtonPopUp">
+                <div class="row containerButtonRow">
+                    <div class="col-6 containerButtonCol">
+                        <button class="btn btn-danger" id="btnCancelPopUp">Cancel</button>
+                    </div>
+                    <div class="col-6 containerButtonCol">
+                        <button class="btn btn-success" id="btnConfirmPopUp">Confirm</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row tabTournamentsRow">
+            <div class="col-12">
+                <div class="tournamentsBox bg-dark">
+                    <h1 class="tournamentsTitle">Tournaments</h1>
+                    <!--                    <hr class="my-4 separator separatorTournament">-->
+                    <div class="table table-responsive">
+                        <table class="table-tournaments table-striped table-dark table-hover">
+                            <thead>
+                            <tr>
+                                <th class="partyCell">Party</th>
+                                <th class="durationCell">Starting date</th>
+                                <th class="bidCell">Bid</th>
+                                <th class="joinCell"></th>
+                            </tr>
+                            <tr>
+                                <th colspan="4" id="tabTournamentsSpinner"><div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></th>
+                            </tr>
+                            </thead>
+                            <tbody class="table-body-tournaments" id="tabTournamentsBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 text-light tournamentExplain">
+                <div class="rulesBox">
+                    <h3>Rules</h3>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p><p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 text-light tournamentExplain">
+                <div class="priceBox">
+                    <h3>Price pool</h3>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p><p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
