--- a/BinaryProjectGit/webcontent/footer.html
+++ b/BinaryProjectGit/webcontent/footer.html
@@ -22,5 +22,5 @@
 <script src="js/login.js" type="text/javascript"></script>
 <script src="js/home.js" type="text/javascript"></script>
 <script src="js/navbar.js" type="text/javascript"></script>
-<!--<script src="Views/Assets/js/tournaments.js" type="text/javascript"></script>-->
+<script src="js/tournaments.js" type="text/javascript"></script>
 </html>
