--- a/BinaryProjectGit/webcontent/header.html
+++ b/BinaryProjectGit/webcontent/header.html
@@ -33,11 +33,11 @@
                     <a class="nav-link" href="/" id="tournamentsLinkHeader">Tournaments</a>
                 </li>
                 <li class="nav-item loginLink">
-<!--                    <?php if($_SESSION['connectedUser'] != null) { ?>-->
-<!--                    <a class="nav-link" href="index.php?action=logout" onclick="logout()">Sign out</a>-->
-<!--                    <?php } else { ?>-->
-                    <a class="nav-link" id="loginLinkHeader" href="/login.html">Sign in</a>
-<!--                    <?php } ?>-->
+<!--&lt;!&ndash;                    <?php if($_SESSION['connectedUser'] != null) { ?>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <a class="nav-link" href="index.php?action=logout" onclick="logout()">Sign out</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <?php } else { ?>&ndash;&gt;-->
+<!--                    <a class="nav-link" id="loginLinkHeader" href="/" id="loginLinkHeader">Sign in</a>-->
+<!--&lt;!&ndash;                    <?php } ?>&ndash;&gt;-->
 
                 </li>
             </ul>
