Long time no see...

--- a/BinaryProjectGit/webcontent/header.html
+++ b/BinaryProjectGit/webcontent/header.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Binary Project</title>
+    <title>Crypto Contests</title>
     <meta name="google-signin-client_id" content="398953615251-opllhkrv8a95cqpq6lau3tf29gekk119.apps.googleusercontent.com">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/graph.css">
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" type="text/css" href="css/tournaments.css">
+    <link rel="stylesheet" type="text/css" href="css/playing.css">
+    <link rel="stylesheet" type="text/css" href="css/admin.css">
 </head>
 <body>
 <header>
@@ -29,9 +31,10 @@
                     <a class="nav-link" href="/" id="homeLinkHeader">Home</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item tournamentsLiHeader">
                     <a class="nav-link" href="/" id="tournamentsLinkHeader">Tournaments</a>
                 </li>
+                <li class='nav-item adminLiHeader'><a class='nav-link' href='/' id='adminLinkHeader'>Admin</a></li>
                 <li class="nav-item loginLink">
 <!--&lt;!&ndash;                    <?php if($_SESSION['connectedUser'] != null) { ?>&ndash;&gt;-->
 <!--&lt;!&ndash;                    <a class="nav-link" href="index.php?action=logout" onclick="logout()">Sign out</a>&ndash;&gt;-->
