--- a/BinaryProjectGit/webcontent/footer.html
+++ b/BinaryProjectGit/webcontent/footer.html
@@ -17,6 +17,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+<script src="js/cleave.min.js"></script>
 <script src="js/utility.js" type="text/javascript"></script>
 <script src="js/login.js" type="text/javascript"></script>
 <script src="js/home.js" type="text/javascript"></script>
